# CMSC756

./: .gitignore  README.md
src/HW1/: README.md
src/HW1/scripts/: problem4.py  problem5.py
src/HW2/: README.md
src/HW2/scripts/: problem4.py
src/HW3/: README.md
src/HW3/scripts/: problem4.py
src/HW4/: README.md
src/HW4/scripts/: linesegments.py  polygons.py  problem1.py  problem2.py
src/HW5/: README.md
src/HW5/scripts/: polygons.py  problem1.py  tempy.py
src/HW6/: README.md
src/HW6/scripts/: problem1.py
src/HW7/scripts/: problem3.py
src/Project/: ReadMe.md
src/Project/docker/: project.Dockerfile
src/Project/door_u/: CMakeLists.txt  package.xml
src/Project/door_u/config/: .attribute^  joint_names_door_u.yaml
src/Project/door_u/launch/: .attribute^  display.launch  gazebo.launch
src/Project/door_u/meshes/: .attribute^  door.STL  door_base.STL
src/Project/door_u/urdf/: .attribute^  door_u.csv  door_u.urdf
src/Project/door_u/xacro/: door_u.urdf.xacro
src/Project/shadow_arm/: CMakeLists.txt  package.xml
src/Project/shadow_arm/config/: config_controllers.yaml
src/Project/shadow_arm/launch/: door_opener.launch  door_opener_with_velocity.launch  sr_right_ur10arm_hand.launch
src/Project/shadow_arm/scripts/: arm_initialzer.py  forward_kinematics.py  grasper.py  hand_initializer.py  inverse_kinematics.py  starter.py
src/Project/shadow_arm/src/: pregrasp_pose_publisher.cpp
src/Project/shadow_arm/xacro/: right_srhand_ur10_bt_sp_biotacs.urdf.xacro  v_transmission.xacro  v_wrapper.xacro
